--- a/building-a-regularity-classifier.tex
+++ b/building-a-regularity-classifier.tex
@@ -1,5 +1,5 @@
 
-The ideas developed in Section~\ref[addingsec] can be used to try and classify samples of functions by their regularity.  The regularity classifier that we are going to define will be the main tool necessary to later develop an algorithm for the interpolation of discontinuous functions.
+The ideas developed in Section~\ref[addingsec] can be used to classify samples of functions by their regularity.  The regularity classifier that we are going to define will be the main tool necessary to later develop an algorithm for the faithful interpolation of discontinuous functions.
 
 
 In what follows, even if not always strictly necessary, we will assume that  the kernel~$Φ$ is radial, i.e., of the form~\ref[phi] for some univariate positive definite function~$\phi$.  This applies also to the notations, with the letter~$\phi$ replacing the uppercase letter~$Φ$. Moreover, to be specific, $\phi$ will be one of the radial functions introduced in Section~\ref[positivesec]. Let $X=\{\range x_N/\}$ be a set of data sites and $f$ a function that is no more assumed to belong to the native space of~$\phi$.  Suppose that $f$ has been sampled at~$X$ and the sampling is dense enough to catch the relevant features of~$f$ on its considered domain.  Our goal is to determine the regularity of~$f$ just by looking at~$X$ and the corresponding sampled function values~$f(X)$.
@@ -46,7 +46,7 @@ Then the elements~$E_k=f_k-s^{(k)\!}(x_k)$ of the cross-validation vector~$\Bm E
 $$
 E_k = {α_k\over C_{k,k}},
 $$
-where $\Bm C$ is the inverse of the interpolation matrix~$\Bm A=\Bm A_{\phi,X}$ associated to the function~$\phi$ and the set~$X$ of locations, and $\Bm α$ is the vector of coefficients of the unique function~$s\in\Cal S_{\phi,X}$ that interpolates $f$ on~$X$, that is the solution of the linear sistem~$\Bm{Aα} = \Bm f$. 
+where $\Bm C$ is the inverse of the interpolation matrix~$\Bm A=\Bm A_{\phi,X}$ associated to the function~$\phi$ and the set~$X$ of locations, and $\Bm α$ is the vector of coefficients of the unique function~$s\in\Cal S_{\phi,X}$ that interpolates $f$ on~$X$, that is the solution of the linear system~$\Bm{Aα} = \Bm f$. 
 \proof
 For each point~$x\in\Omega$ let $\Bm t(x)$ be the evaluation at~$x$ of the vector of kernel translates centred at the points of~$X$, that we already defined in~\ref[uandt], namely
 $$
