--- a/invariance-properties.tex
+++ b/invariance-properties.tex
@@ -54,7 +54,7 @@ $$
 $$
 The dependence on~$ε$ of the quantities $E_k$ and~$W_k$ lies  only in the framed ratios,  whose numerator and denominator are elements of the matrix~$\Bm C$.  If we show that those terms converge when~$ε→0$, then we are done.
 
-We can fix a radius~$r\geq 0$ and view $\phi_ε(r)$ as a function of~$ε$ rather than~$r$, and consider its power series expansion\fnote{All the positive definite functions that we are considering---the ones described in Section~\ref[positivesec]---are {\em analytic} in a (right) neighbour of~$r=0$.} at the point~$ε=0$,
+We can fix a radius~$r\geq 0$ and view $\phi_ε(r)$ as a function of~$ε$ rather than~$r$, and consider its power series expansion\fnote{All the positive definite functions that we are considering---the ones described in Section~\ref[positivesec]---are {\em analytic} in a (right) neighbour of~$0$.} centred at the point~$ε=0$,
 $$
 \phi_ε(r) = \phi(εr) = a_{0\!}(r) + a_{1}\!(r)\,ε + a_{2\!}(r)\,ε^2 + a_{3\!}(r)\,ε^3 + \cdots,
 $$
@@ -83,7 +83,7 @@ $$
 
 The limiting vector~$\Bm Q$ when $ε→0$ clearly depends on both the data sites $X$ and the data values~$F$ from which it has been computed. The dependence on~$F$ is in the coefficients~$f_j$ of the expressions~\ref[EkWk] for $E_k$ and~$W_k$; the dependence on~$X$ is in the ratios of elements of~$\CC_{\!\!\Bm{--p}}$ that appear in the same expressions when~$ε→0$.
 
-Instead, in the opposite case, that is when $ε→∞$, the vector~$\Bm Q\.$ loses its dependence on~$X$.  In fact, if we assume without loss of generality that~$\phi(0)=1$, then the interpolation matrix~$\Bm A$ converges to the identity matrix  when $ε→∞$, and this implies that $\norm{s}_\phi^2→ \Bm f^{\,\.T\!}\Bm f$ and $\norm{s^{(k)\!}}_\phi^2→ (\,\Bm f^{\,\.(k)\!})^{T\!}\Bm f^{\,\.(k)}\!$, and finally that $\smash{Q_k→ f_k^{\.2}/(\,\Bm f^{\,\.T\!}\Bm f\,)}$ (here the vectors $\.\Bm f$ and~$\.\smash{\Bm f^{\,\.(k)\!}\!}$ are defined as in Theorem~\ref[rippatheo]).
+Instead, in the opposite case, that is when $ε→∞$, the vector~$\Bm Q\.$ loses its dependence on~$X$.  In fact, under the usual assumption~\ref[convention] that $\phi(0)=1$ and~$\lim_{r→∞}\phi(r) = 0$,  the interpolation matrix~$\Bm A$ converges to the identity matrix  when $ε→∞$, and this implies that $\norm{s}_\phi^2→ \Bm f^{\,\.T\!}\Bm f$ and $\norm{s^{(k)\!}}_\phi^2→ (\,\Bm f^{\,\.(k)\!})^{T\!}\Bm f^{\,\.(k)}\!$, and finally that $\smash{Q_k→ f_k^{\.2}/(\,\Bm f^{\,\.T\!}\Bm f\,)}$ (here the vectors $\.\Bm f$ and~$\.\smash{\Bm f^{\,\.(k)\!}\!}$ are defined as in Theorem~\ref[rippatheo]).
 The case when $ε$~is big, therefore, doesn't seem to be very interesting, because in that case $\Bm Q$ does not store any valuable information about the data sites~$X$.  We also notice that, in the limiting case~$ε→∞$, the vector~$\Bm Q$ has the property that $\norm{\Bm Q}_1 = 1$, independently of the data values~$F$, and the classifier of Definition~\ref[classifierdef] becomes useless.
 
 
@@ -169,9 +169,9 @@ The proof has not been completed yet, because it remains to see what happens whe
 Property~\ref[scaleprop] and~Property~\ref[translprop] together say that the vector~$\Bm Q\.$ in the flat limit is invariant under a bijective linear transformation of the set~$F$ of function values.
 This kind of transformation is nothing more than the $1$-dimensional case of a {\em similarity}.  In general, in dimension~$N$, a similarity is defined as a transformation~${\cal T}:\R^{N\!}→\R^{N\!}$ that can be written as
 $$
-\Cal T(x) = r\, \Cal O(x) + t,\quad x\in\R^N\!\!\!,
+\Cal T(x) = \rho\, \Cal O(x) + t,\quad x\in\R^N\!\!\!,
 $$
-with $r$ being a positive real number, $\cal O$ an orthogonal\fnote{A transformation is {\em orthogonal} if it can be represented by an orthogonal matrix, that is a matrix whose inverse equals its transpose.  An orthogonal transformation is a rotation, a reflection, or a combination of them.} transformation, and~$t$ a point of~$\R^N\!\!\!$.\,\,   A similarity can be viewed simply as a transformation that preserves the {\em shape} of the object (in our case, of the set of points) to which it is applied.  
+with $\rho$ being a positive real number, $\cal O$ an orthogonal\fnote{A transformation is {\em orthogonal} if it can be represented by an orthogonal matrix, that is a matrix whose inverse equals its transpose.  An orthogonal transformation is a rotation, a reflection, or a combination of them.} transformation, and~$t$ a point of~$\R^N\!\!\!$.\,\,   A similarity can be viewed simply as a transformation that preserves the {\em shape} of the object (in our case, of the set of points) to which it is applied.  
 
 % It represent a transformation that doesn't change the shape...
 
@@ -181,11 +181,11 @@ Y = \{\range y_N/\}
   = \{\Cal T(x_1),\.\Cal T(x_2),\, \dots,\,\Cal T(x_N)\}
   \eqcolon  \Cal T(X),
 $$
-by means of a similarity~$\Cal T\!$, something similar happens---$\Bm Q$ doesn't change in the flat limit.  We state this fact separated into two properties, considering first a uniform dilation ($\Cal O = \hbox{\EBGaramond\it Identity}$, $t = 0\in\R^N$) and then a Euclidean transformation ($r = 1$).  Here the set~$F$ of function values is fixed, so the subscript we'll be used to mark the dependence on the data sites: for instance, $\Bm Q_{X\!}$ will denote the vector~$\Bm Q$ associated to~$(X, F)$, and $\Bm Q_{Y\!}$ will stand for the vector~$\Bm Q$ associated to the transformed data~$(Y, F)$.
+by means of a similarity~$\Cal T\!$, something similar happens---$\Bm Q$ doesn't change in the flat limit.  We state this fact separated into two properties, considering first a uniform dilation ($\Cal O = \hbox{\EBGaramond\rm Identity}$, $t = 0\in\R^N$) and then a Euclidean transformation ($\.\rho = 1$).  Here the set~$F$ of function values is fixed, so the subscript we'll be used to mark the dependence on the data sites: for instance, $\Bm Q_{X\!}$ will denote the vector~$\Bm Q$ associated to~$(X, F)$, and $\Bm Q_{Y\!}$ will stand for the vector~$\Bm Q$ associated to the transformed data~$(Y, F)$.
 
 \preskip
 \property
-If $Y = rX$ for some real number~$r> 0$, then
+If $Y = \rho X$ for some real number~$\rho> 0$, then
 $$
 \lim_{ε→0}\Bm Q_{Y} = \lim_{ε→0}\Bm Q_{X}.
 $$ 
@@ -195,11 +195,11 @@ The vector~$\Bm Q_{X\!}$ depends on~$X$ only through the interpolation matrix~$\
 $$
 (A_X)_{i,j} = \phi_ε(\norm{x_i - x_j}) = \phi(ε\.\norm{x_i - x_j}), \quad i,j\in\{1,2,\dots,N\}.
 $$
-If $X$ becomes~$Y = rX$, then each element~$(A_X)_{i,j}$ becomes
+If $X$ becomes~$Y = \rho X$, then each element~$(A_X)_{i,j}$ becomes
 $$
-(A_Y)_{i,j} = \phi(ε\.\norm{r\.x_i - r\.x_j}) = \phi(r\.ε\.\norm{x_i - x_j}).
+(A_Y)_{i,j} = \phi(ε\.\norm{\.\rho\.x_i - r\.x_j}) = \phi(\.\rho\.ε\.\norm{x_i - x_j}).
 $$
-The constant~$r$ uniformly multiplies every occurrence of the parameter~$ε$ in the transformed matrix~$\Bm A_Y$, therefore the change made by~$r$ is irrelevant when the limit~$ε→0$ is considered.~\QED
+The constant~$\rho$ uniformly multiplies every occurrence of the parameter~$ε$ in the transformed matrix~$\Bm A_Y$, therefore the change made by~$\rho$ is irrelevant when the limit~$ε→0$ is considered.~\QED
 \postskip
 
 
@@ -219,7 +219,7 @@ Three similar sets of data~$(X, F)$, with $X\subset\R$, meaning that they can be
 \endinsert
 
 
-Actually, as it is clear from the proof, the scaling parameter~$r$ could also have been taken negative.  But the change of sign (the symmetry) is already included in the next result.
+Actually, as it is clear from the proof, the scaling parameter~$\rho$ could also have been taken negative.  But the change of sign (the symmetry) is already included in the next result.
 
 \preskip
 \property If $Y=\Cal O(X) + t$ for some orthogonal transformation~$\Cal O$ and some point~$t\in\R^N\!\!\!$,\,\, then $\Bm Q_{Y\!} = \Bm Q_{X}$.
@@ -229,4 +229,4 @@ This simply follows from the fact that the interpolation process made with a rad
 
 
 
-Summing up, we saw that when $ε→0$ the regularity vector~$\Bm Q$ converges to a limit vector which is invariant under a shape preserving transformation applied to~$X$ or to~$F$.  This fact is very important if we wish to employ~$\Bm Q$ to determine the regularity of some data~$(X, F)$---the regularity of two sets of data that have the same shape should be the same.  Figure~\ref[shapefig] may make this claim apparent.  Since the interesting behaviour of~$\Bm Q$ is achieved in the flat limit, we must find a way to numerically compute a good approximation of $\lim_{ε\to0}\Bm Q$.
+Summing up, we saw that when $ε→0$ the regularity vector~$\Bm Q$ converges to a limit vector which is invariant under a shape preserving transformation applied to~$X$ or to~$F$ or both.  This fact is very important if we wish to employ~$\Bm Q$ to determine the regularity of some data~$(X, F)$---the regularity of two sets of data that have the same shape should be the same.  Figure~\ref[shapefig] may make this claim apparent.  Since the interesting behaviour of~$\Bm Q$ is achieved in the flat limit, we must find a way to numerically compute a good approximation of $\lim_{ε\to0}\Bm Q$.
