--- a/numerical-considerations.tex
+++ b/numerical-considerations.tex
@@ -6,14 +6,14 @@
 From the numerical point of view, it  may be problematic to  actually  compute a good approximation of~$\Bm Q\.$ when $ε\to0$.  In fact, as $ε$ becomes smaller and smaller, the rows (and the columns) of the interpolation matrix~$\Bm A$ become increasingly similar one to another, and the procedure  devised in Proposition~\ref[Ucomputation] to efficiently compute the values of the vector~$\Bm U$, and hence the values of~$\Bm Q\.$, may be unstable\fnote{Refer to the end of Section~\ref[errorsec] for other considerations about the stability of the standard interpolation algorithm.}$\!\.\!\!$,\,\, because it involves the inverse of the matrix~$\Bm A$. 
 
 
-Fortunately, if the employed radial function~$\phi$ is not too much regular, numerical tests show that there is a wide interval~$I$ of values for~$ε$ that allow to obtain a very good approximation of the limit value of~$\Bm Q\.$, before incurring in malconditioning problems. 
+Fortunately, if the employed radial function~$\phi$ is not too much regular, numerical tests show that there is a wide interval~$I$ of values for~$ε$ that allow to obtain a very good approximation of the limit value of~$\Bm Q\.$, before incurring in problems of ill conditioning. 
 Figure~\ref[limitQfig] shows what happens when $\phi$ is one of the Wendland's functions of Table~\ref[wentab] or the Gaussian function of Example~\ref[gaussianex]. From that picture it seems apparent that the range~$I$ of values in which~$ε\.$ can be chosen decreases as the regularity of~$\phi$ increases.  If the regularity of~$\phi$ is high, either it may be hard to pick a value of~$ε$ such that~$ε\in I$, or it may even be impossible when it happens that $I=\emptyset$, i.e.,  when the limit value of~$\Bm Q$ is numerically never reached.  For the applications that we have in mind---either detecting function discontinuities or gradient faults---this fact doesn't constitute a big problem.  In fact, we'll be interested in using mainly the $\Cal C^0$ or~$\Cal C^2$ functions, for reasons that we'll explain later.
 
 
 
 
 
-One way to improve numerical stability when computing~$\Bm Q\.$ on a given set~$(X, F)$ of sampled data consists in bringing~$F$ closer to the origin before actually performing the computations, by taking adavantage of Property~\ref[translprop] and replacing~$F$ with  $G = F-\mathop{\rm mean}(F)$, for instance. In fact, it can be observed either using the formulae present in the proofs of Property~\ref[flatlimit] and Property~\ref[translprop], or also from  numerical tests, that this shift allows to obtain the same level of approximation for~$\lim_{ε\to 0} \Bm Q\.$ by using a bigger value of~$ε$, that is less likely to produce a malconditioned interpolation matrix.
+One way to improve numerical stability when computing~$\Bm Q\.$ on a given set~$(X, F)$ of sampled data consists in bringing~$F$ closer to the origin before actually performing the computations, by taking adavantage of Property~\ref[translprop] and replacing~$F$ with  $G = F-\mathop{\rm mean}(F)$, for instance. In fact, it can be observed either using the formulae present in the proofs of Property~\ref[flatlimit] and Property~\ref[translprop], or also from  numerical tests, that this shift allows to obtain the same level of approximation for~$\lim_{ε\to 0} \Bm Q\.$ by using a bigger value of~$ε$, that is less likely to produce a ill conditioned interpolation matrix.
 
 
 Talking about the vector~$\Bm Q\.$, an interesting fact to notice is that it can detect different kinds of function irregularities depending on the used radial function~$\phi$.  Consider, as an example, the four functions~$f_1$, $f_2$, $f_3$, $f_4$, defined on the interval~$[-1,1]\subset\R$ as
@@ -31,7 +31,7 @@ $$
 which satisfy the following properties: $f_1$ is discontinuous; $f_2$ is of class~$\Cal C^0$ but not~$\Cal C^1$; $f_3$ is of class~$\Cal C^2$ but not~$\Cal C^1$; and $f_4$ is~$\Cal C^\infty\!\!$.\,\,
 After having sampled each of these functions at a set~$X$ of $25$ uniformly spaced points in~$[-1,1]$ (other sets of points could have been used as well), the $\phi$-regularity vector~$\Bm Q$ was computed (for a small enough value of~$\varepsilon$) using three different radial functions~$\phi$, namely the Wendland's $\Cal C^0$, $\Cal C^2$ and~$\Cal C^4$ functions.   The sampled functions and the computed components of~$\Bm Q$ are shown in Figure~\ref[diffregular].
 
-We see that the Wendland's $\Cal C^0$ function is able to detect the discontinuity of~$f_1$, but it almost doesn't see the gradient discontinuity of~$f_2$ (the small signal detected at the point~$x=0$ vanishes as the number  of sampled points is increased), and it doesn't detect the discontinuity of the second derivative in the case of~$f_3$.  Instead, both the Wendland's $\Cal C^2$ and~$\Cal C^4$ functions can detect, with signals of different amplitude, the irregularities of $f_2$ and~$f_3$.  Finally, neither of the considered radial functions  detect any irregularity in the smooth function~$f_4$, except some small signals at the boundary of the domain, that however appear also with the other functions.
+We see that the Wendland's $\Cal C^0$ function is able to detect the discontinuity of~$f_1$, but it almost doesn't see the gradient discontinuity of~$f_2$ (the small signal detected at the point~$x=0$ vanishes as the number  of sampled points is increased), and it doesn't detect the discontinuity of the second derivative in the case of~$f_3$.  Instead, both the Wendland's $\Cal C^2$ and~$\Cal C^4$ functions can detect, with signals of different amplitude, the irregularities of $f_2$ and~$f_3$.  Finally, neither of the considered radial functions  detect any irregularity in the smooth function~$f_4$, except some small anomalies at the boundary of the domain, that however appear also with the other functions.
 
 
 Up to now we have always talked about the regularity vector~$\Bm Q\.$, but never we mentioned the regularity classifier~$\Cal R$ of Definition~\ref[classifierdef], that is built upon it.  We show now some properties satisfied by the $1$-norm of the vector~$\Bm Q$ that should justify the given definition for~$\Cal R$.  For this purpose, as an example we consider on the interval~$[-1,1]\subset\R$ the following four functions,
@@ -110,7 +110,7 @@ From a set~$(X, F)$ of data (shown at the top), where $X\subset[0,1]\subset\R$ w
 \egroup
 \kern-5ex
 \caption/f
-Plots of the functions $f_1$ (top left), $f_2$ (top right), $f_3$ (bottom left) and $f_4$ (bottom right), with their sampled data.  Under each of them there is a visualisation of the components of the limit vector~$\Bm Q$ computed with the Wendland's $\Cal C^0$ (blue), $\Cal C^2$ (red) and $\Cal C^4$ (black) functions.
+Plots of the functions $f_1$ (top left), $f_2$ (top right), $f_3$ (bottom left) and $f_4$ (bottom right), with their sampled data.  Under each of them there is a visualisation of the components of the vector~$\Bm Q$ computed with the Wendland's $\Cal C^0$ (blue), $\Cal C^2$ (red) and $\Cal C^4$ (black) functions and a sufficiently small parameter~$\varepsilon$.
 \bigskip
 \endinsert
 
@@ -129,7 +129,7 @@ Plots of the functions $f_1$ (top left), $f_2$ (top right), $f_3$ (bottom left) 
 \egroup
 \kern-5ex
 \caption/f
-Plots of the functions $g_1$ (top left), $g_2$ (top right), $g_3$ (bottom left) and $g_4$ (bottom right), with their sampled data.  Under each of them there is a visualisation of the components of the limit vector~$\Bm Q$ computed with the  Wendland's $\Cal C^2$ function.
+Plots of the functions $g_1$ (top left), $g_2$ (top right), $g_3$ (bottom left) and $g_4$ (bottom right), with their sampled data.  Under each of them there is a visualisation of the components of the vector~$\Bm Q$ computed with the  Wendland's $\Cal C^2$ function and a sufficiently small parameter~$\varepsilon$.
 \bigskip
 \endinsert
 
