--- a/introduction.tex
+++ b/introduction.tex
@@ -21,7 +21,7 @@ as a sum of kernel translates centred at the data sites. Then,
 if the given sample comes
 from a function whose regularity changes along its domain, the basis of the interpolation space does not reflect the properties of the underlying function and artifacts will usually
 appear in the final reconstruction. For instance if the function has edges, and a straight direct
-interpolation is attempted, the Gibbs phenomenon is likely to arise  producing  highly oscillatory behaviours  in regions close to the discontinuities. In the case of gradient faults, over-smoothing (or smearing) of creases will occur. 
+interpolation is attempted, the Gibbs phenomenon is likely to arise  producing  highly oscillatory behaviours  in regions close to the discontinuities. In the case of gradient faults, over-smoothing of creases will occur. 
 
 
 
@@ -60,8 +60,8 @@ This model is trained with the  previously determined subsets~$X_j$ of data site
 The thesis is structured as follows:
 \begitems\vskip\parskip
 * Chapter 1---Kernel-based interpolation.  This first chapter serves to introduce the scattered interpolation problem and to show how it can be solved by using kernel techniques. In particular we talk about positive definite functions, their associated native spaces, and error estimates.
-* Chapter 2---Data classification.  Here is where we build the vectors $\Bm U$ and~$\Bm Q$ and the regularity classifier.  We first show that there is a way to efficiently compute~$\Bm U$, then prove certain properties of invariance satisfied by~$\Bm Q\.$, and finally show some examples.
-* Chapter 3---Discontinuities detection and reconstruction. In this last chapter we describe both phases of our technique to recover a discontinuous function from scattered data, and show some examples.
+* Chapter 2---Data classification.  Here is where we build the vectors $\Bm U$ and~$\Bm Q$ and the regularity classifier.  We first show that there is a way to efficiently compute~$\Bm U$, then prove certain properties of invariance satisfied by~$\Bm Q\.$, and finally provide some examples.
+* Chapter 3---Discontinuities detection and reconstruction. In this last chapter we describe both phases of our technique to recover a non-regular function from scattered data, and show some examples.
 \enditems
 
 
