--- a/reconstruction-examples.tex
+++ b/reconstruction-examples.tex
@@ -1,6 +1,6 @@
 
 
-As test functions we consider the functions $h_1$, $h_2$, $h_3$ and~$h_4$ that were previously defined at page~\pgref[segmexamples].
+As test functions we consider again the functions $h_1$, $h_2$, $h_3$ and~$h_4$ that were previously defined in~\ref[testfunctions].
 As before, we sample them at the set of $2^{10}$ halton points on the domain~$\Omega=[0,1]\times[0,1]$.  For this particular set of data sites we already obtained a domain segmentation, by running our domain segmentation algorithm---refer to Figure~\ref[segmh1], \ref[segmh2], \ref[segmh3] and~\ref[segmh4].  Therefore for each of the considered functions we have a collection of subsets~$X_j$ of~$X$, each of them  contained in its corresponding subset~$\Omega_j$ of~$\Omega$.
 
 
@@ -13,12 +13,13 @@ In some of the test cases, it happens that not all the points have been included
 \bgroup
 \picw=.75\hsize
 \line{\hss\inspic{f1_curves.pdf}\hss}
+\kern.2cm
 \picw=.6\hsize
 \line{\hss\inspic{f1_ori.pdf}\kern-.8cm\inspic{f1_rec.pdf}\hss}
 \egroup
 \cskip
 \caption/f
-\bigskip
+\vss
 \endinsert
 
 
@@ -28,12 +29,13 @@ In some of the test cases, it happens that not all the points have been included
 \bgroup
 \picw=.75\hsize
 \line{\hss\inspic{f4_curves.pdf}\hss}
+\kern.2cm
 \picw=.6\hsize
 \line{\hss\inspic{f4_ori.pdf}\kern-.8cm\inspic{f4_rec.pdf}\hss}
 \egroup
 \cskip
 \caption/f
-\bigskip
+\vss
 \endinsert
 
 
@@ -42,12 +44,13 @@ In some of the test cases, it happens that not all the points have been included
 \bgroup
 \picw=.75\hsize
 \line{\hss\inspic{f9_curves.pdf}\hss}
+\kern.2cm
 \picw=.6\hsize
 \line{\hss\inspic{f9_ori.pdf}\kern-.8cm\inspic{f9_rec.pdf}\hss}
 \egroup
 \cskip
 \caption/f
-\bigskip
+\vss
 \endinsert
 
 
@@ -57,12 +60,13 @@ In some of the test cases, it happens that not all the points have been included
 \bgroup
 \picw=.75\hsize
 \line{\hss\inspic{f10_curves.pdf}\hss}
+\kern.2cm
 \picw=.6\hsize
 \line{\hss\inspic{f10_ori.pdf}\kern-.8cm\inspic{f10_rec.pdf}\hss}
 \egroup
 \cskip
 \caption/f
-\bigskip
+\vss
 \endinsert
 
 
@@ -72,12 +76,13 @@ In some of the test cases, it happens that not all the points have been included
 \bgroup
 \picw=.75\hsize
 \line{\hss\inspic{f6_curves.pdf}\hss}
+\kern.2cm
 \picw=.6\hsize
 \line{\hss\inspic{f6_ori.pdf}\kern-.8cm\inspic{f6_rec.pdf}\hss}
 \egroup
 \cskip
 \caption/f
-\bigskip
+\vss
 \endinsert
 
 
